[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VNP21IMGNRT-002"
version = "1.0.0"
description = "VIIRS/NPP Land Surface Temperature and Emissivity 6-Min L2 Swath 375m NRT"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colored-logging",
    "earthaccess",
    "modland",
    "python-dateutil",
    "rasters",
    "sentinel-tiles",
    "VIIRS-Swath-Granules>=1.1.1"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[tool.setuptools.package-data]
VNP21A1D_002 = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/ET-Toolbox/VNP21A1D-002"

[tool.setuptools.packages.find]
include = ["VNP21A1D_002"]
exclude = ["data", "build", "tests"]
